# tranche

./: CONTRIBUTING.md  Cargo.toml  README.md  lib.rs
tests/: based.rs  core.rs  std.rs
tranche/: Cargo.toml
tranche/src/: buf.rs  core.rs  iter.rs  lib.rs  std.rs
